--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
           <img class="nav-bag" src="assets/logo.png" alt="" />
           <h3 class="brand">SCHOOL</h3>
         </div>
+        <!-- Hamburger menu icon -->
+        <div class="hamburger-menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <ul class="nav-links display-flex">
           <li class="nav-item">
             <a href="" id="nav-link1" class="nav-link">Home</a>
@@ -84,11 +90,8 @@
             <button class="section1-btn3">Read More</button>
           </div>
         </div>
-        <button class="arrow"><img src="assets/Group 11.svg" alt=""></button>
-
+        <button class="arrow"><img src="assets/Group 11.svg" alt="" /></button>
       </section>
-
-      <section></section>
     </main>
 
     <footer class="footer">
